--- a/config/app.yml
+++ b/config/app.yml
@@ -1,9 +1,11 @@
 ---
 development:
-  API_URL: 'http://localhost:3000/api/v1'
+  API_URL: http://localhost:3000/api/v1
+  APP_URL: http://localhost:9292
 
 test:
-  API_URL: 'http://localhost:3000/api/v1'
+  API_URL: http://localhost:3000/api/v1
+  APP_URL: http://localhost:9292
 
 production:
-  API_URL: 'https://tototileboard.herokuapp.com/api/v1'
+  API_URL: https://tototileboard.herokuapp.com/api/v1
